# Oracle-26ai-LangChain-RAG

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  opencode.json  pyproject.toml  run_api.sh
api/: __init__.py  bootstrap.py  dependencies.py  graph.py  main.py  rag_agent_api.py  resources.py  schemas.py  serialization.py  settings.py
api/errors/: __init__.py  exception_handlers.py
api/middleware/: __init__.py  request_context.py
api/routes/: __init__.py  api.py  chat.py  config_router.py  documents.py  feedback.py  graph.py  health.py  mcp.py  suggestions.py
api/services/: graph_service.py
api/streaming/: ai_sdk_stream.py
docker/: Dockerfile
docs/: CHAT_MEMORY_AND_SESSIONS.md  CHAT_STREAMING_PROTOCOL.md  CONFIGURATION.md  DATABASE-SETUP.md  DOCKER-SETUP.md  DOCUMENT-POPULATION.md  GETTING-STARTED.md  LOGGING-ANALYTICS.md  MCP-USAGE.md  OBSERVABILITY.md  OBSERVABILITY_ROUTING.md  OCI-SESSION-TOKEN.md  README.md  SERVER-OWNED-MEMORY.md  TRACING.md  _navbar.md  _sidebar.md  index.html
docs/api/: README.md
docs/api/00-overview/: README.md
docs/api/10-health/: README.md
docs/api/20-chat/: README.md
docs/api/30-documents/: README.md
docs/api/40-graph/: README.md
docs/api/50-mcp/: README.md
docs/api/60-config-suggestions-feedback/: README.md
docs/api/bruno/: bruno-manifest.json
docs/api/environments/: local.example.json
frontend/: .gitignore  Dockerfile  README.md  env.example  knip.json  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: config-provider.tsx  toaster.tsx
frontend/src/constants/: chat.ts
frontend/src/hooks/: useChatBodyParams.ts  useChatSession.ts  useSuggestions.ts  (+1 more)
mcp_servers/: __init__.py  mcp_rag_server.py  mcp_semantic_search.py
observability/: check-data.sh  loki.yaml  otel-collector.yaml  send-one-trace-and-log.py  tempo.yaml
observability/langfuse/: .env.example  README.md  docker-compose.yml
scripts/: __init__.py  create_rag_table.py  drop_table.py  export_openapi.py  ingest_documents.py  manage_stacks.py  regression_guard.sh  release_checklist.sh  serve_docs.sh  streaming_smoke_test.sh  sync_api_docs.py  truncate_table.py  verify_oci_logging_analytics.py
src/: __init__.py
src/rag_agent/: __init__.py  agent_state.py  ingestion.py  metadata_schema.py  prompts.py  schemas.py  workflow.py
tests/: __init__.py  conftest.py  run_draw_mermaid.py  run_mcp_list_collection.py  run_mcp_minimal.py  run_mcp_rag.py  run_mcp_semantic_search.py  test_ai_sdk_stream.py  test_answer_generator_mcp.py  test_answer_generator_structured.py  test_api_docs_sync.py  test_api_resources.py  test_branch_nodes.py  test_build_chat_config.py  test_chat_nonstream_and_validation.py  test_chat_persistence_and_delete.py  test_code_mode_client.py  test_code_mode_tool.py  test_direct_mcp_tools.py  test_documents_upload_route.py  test_followup_interpreter.py  test_ingestion.py  test_langfuse_tracing.py  test_llm_vcr_integration.py  test_llm_with_mcp.py  test_mcp_agent.py  test_mcp_agent_prompts_hash.py  test_mixed_mode_v2_integration.py  test_openapi_baseline.py  test_request_id_propagation.py  test_retrieval_filters.py  test_rewrite_for_retrieval.py  test_router_decisions.py  test_smoke_code_mode_mcp_rag.py  test_tool_selection.py  test_trajectory_match_agentevals.py  test_verification_queries.py
tests/fixtures/: openapi-baseline.json  otlp_test_log.json
tests/integration_tests/: test_llm_vcr_integration.py  test_trajectory_match_agentevals.py  test_verification_queries.py
tests/unit_tests/: helpers.py  test_api_resources.py  test_build_chat_config.py  test_citations.py  test_direct_mcp_tools.py  test_documents_upload_route.py  test_generic_fake_chat_model_structured_output.py  test_graph_service_oci_runtime.py  test_ingest_documents_cli.py  test_langchain_testing_layout_policy.py  test_langfuse_tracing.py  test_mcp_adapter_runtime.py  test_mcp_adapter_runtime_cache.py  test_mcp_agent.py  test_mcp_agent_executor.py  test_mcp_agent_prompts_hash.py  test_oci_models.py  test_otel_logging.py  test_otel_tracing.py  test_runtime_agent.py  test_streaming_utils.py
tests/workflow_tests/: test_ai_sdk_stream.py  test_api_docs_sync.py  test_chat_nonstream_and_validation.py  test_chat_persistence_and_delete.py  test_oci_agent_runtime.py  test_openapi_baseline.py  test_request_id_propagation.py  test_suggestions_api.py
(+106 files in other folders)
